<resources>
    <string name="a11y_keep_suggestion_fmt">Keep suggestion \"%s\"</string>
    <string name="a11y_keep_suggestion_picked">Suggestion was kept.</string>
    <string name="a11y_remove_suggestion_fmt">Remove suggestion \"%s\"</string>
    <string name="a11y_remove_suggestion_picked">Suggestion was removed.</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_key_popup_emoji_data">smiley</string>
    <string name="action_key_popup_emoticon_data">emoticon</string>
    <string name="add">Add</string>
    <string name="add_style">Add style</string>
    <string name="android_account_authenticating">Authenticating, please wait…</string>
    <string name="android_account_failed">Authentication failed. Please try again.</string>
    <string name="android_account_title">Account authentication</string>
    <string name="assets_theme_no_background">assets:theme_package_metadata_no_background.binarypb</string>
    <string name="bikey_skip_silence_cost">3.4028235E38</string>
    <string name="bug_report_notification_channel_id">com.google.android.apps.inputmethod.libs.logging</string>
    <string name="bug_report_notification_channel_name">Bug Report</string>
    <string name="button_default">Default</string>
    <string name="capslock_enabled_mode_content_desc">Caps lock enabled</string>
    <string name="care_of_key_content_desc">Care of</string>
    <string name="check_mark_key_content_desc">Check mark</string>
    <string name="close_access_point_feature_content_desc">Close %s</string>
    <string name="close_access_points_menu_content_desc">Close features menu</string>
    <string name="close_popup_content_desc">Alternatives are dismissed</string>
    <string name="colon_key_content_desc">Colon</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="config_metadata_uri_alpha">https://www.gstatic.com/android/keyboard/dictionarypack/ElectricPiano-normal-alpha/metadata.json</string>
    <string name="config_metadata_uri_beta">https://www.gstatic.com/android/keyboard/dictionarypack/ElectricPiano-normal-beta/metadata.json</string>
    <string name="config_metadata_uri_early">https://www.gstatic.com/android/keyboard/dictionarypack/ElectricPiano-normal-early/metadata.json</string>
    <string name="config_metadata_uri_prod">https://www.gstatic.com/android/keyboard/dictionarypack/ElectricPiano-normal/metadata.json</string>
    <string name="confirmation_number_field_content_desc">Enter confirmation number field</string>
    <string name="contextual_extension_class_name" />
    <string name="conv2query_extension_app_whitelist">com.whatsapp com.facebook.orca com.android.mms com.google.android.apps.messaging com.google.android.talk com.google.android.apps.fireball com.twitter.android com.snapchat.android org.telegram.messenger com.google.android.gm com.verizon.messaging.vzmsgs Com.facebook.katana com.instagram.android com.viber.voip jp.naver.line.android Kik.android Com.bsb.hike Com.bbm Com.skype.raider com.facebook.lite Com.tinder com.textra com.tencent.mm Com.zing.zalo Com.badoo.mobile com.grindrapp.android com.imo.android.imoim Ru.ok.android com.jb.gosms com.pof.android</string>
    <string name="conv2query_extension_locales">de,en,fr,it,es,pt</string>
    <string name="custom_input_style_already_exists">The same input style already exists: %s</string>
    <string name="custom_input_style_note_message">Your custom input style needs to be enabled before you start using it. Do you want to enable it now?</string>
    <string name="custom_input_styles_alert_title_modify">Modify custom input style</string>
    <string name="custom_input_styles_alert_title_new">Create new custom input style</string>
    <string name="custom_input_styles_title">Custom input styles</string>
    <string name="date_time_ime_label">Date time keyboard</string>
    <string name="default_country_locales_en_au">en_GB</string>
    <string name="default_country_locales_en_in">en_GB</string>
    <string name="default_country_locales_en_ke">en_GB</string>
    <string name="default_country_locales_en_ng">en_GB</string>
    <string name="default_country_locales_en_nz">en_AU,en_GB</string>
    <string name="default_country_locales_en_za">en_GB</string>
    <string name="default_country_locales_es_ar">es_419,es_US</string>
    <string name="default_country_locales_es_mx">es_419,es_US</string>
    <string name="default_country_locales_pt_002">pt_PT</string>
    <string name="default_language_locale_de">de_DE</string>
    <string name="default_language_locale_en">en_US</string>
    <string name="default_language_locale_es">es_US</string>
    <string name="default_language_locale_fr">fr_FR</string>
    <string name="default_language_locale_it">it_IT</string>
    <string name="default_language_locale_ru">ru_RU</string>
    <string name="delete_key_content_desc">Delete</string>
    <string name="delight_metadata_uri">@string/config_metadata_uri_prod</string>
    <string name="dictionary_download_available">Available</string>
    <string name="dictionary_download_bundled">Bundled</string>
    <string name="dictionary_download_cached">Cached</string>
    <string name="dictionary_download_downloading">Downloading</string>
    <string name="dictionary_download_staged">Staged</string>
    <string name="dictionary_download_summary">Settings for dictionaries</string>
    <string name="dictionary_download_title">Add-on dictionaries</string>
    <string name="dictionary_download_unsupported">Unsupported</string>
    <string name="dictionary_download_update_fresh_metadata">Updating dictionary list with new dictionary metadata.</string>
    <string name="dictionary_download_update_stale_metadata">Failed to download dictionary metadata. Updating dictionary list with old metadata.</string>
    <string name="dictionary_download_update_starting">Updating dictionary list...</string>
    <string name="digit_keyboard_key_content_desc">Digit keyboard</string>
    <string name="digit_keyboard_label">Digit keyboard</string>
    <string name="done_key_content_desc">Done</string>
    <string name="doodle_domain" />
    <string name="doodle_extension_class_name">com.google.android.apps.inputmethod.libs.search.doodle.DoodleExtension</string>
    <string name="dot_china_key_content_desc">Dot 中国</string>
    <string name="dot_cn_key_content_desc">Dot cn</string>
    <string name="dot_com_key_content_desc">Dot com</string>
    <string name="dot_content_desc">Dot</string>
    <string name="dot_edu_key_content_desc">Dot edu</string>
    <string name="dot_gov_key_content_desc">Dot gov</string>
    <string name="dot_hk_key_content_desc">Dot hk</string>
    <string name="dot_net_key_content_desc">Dot net</string>
    <string name="dot_org_key_content_desc">Dot org</string>
    <string name="dot_tw_key_content_desc">Dot tw</string>
    <string name="double_left_book_title_key_content_desc">Double left book title mark</string>
    <string name="emoji_keyboard_key_content_desc">Emoji keyboard</string>
    <string name="emoticon_keyboard_key_content_desc">Emoticon keyboard</string>
    <string name="gboard_cancel_query_content_desc">Cancel current search query</string>
    <string name="gboard_emojihandwriting_content_desc">Draw emoji</string>
    <string name="gboard_gif_search_content_desc">Search for GIFs</string>
    <string name="gboard_no_results_header">No results found</string>
    <string name="gboard_no_results_message">Make sure all words are spelled correctly or try different keywords.</string>
    <string name="gboard_no_results_subheader">Query did not match any results.</string>
    <string name="gif_disabled_toast_message">This text field does not support GIF insertion from the keyboard.</string>
    <string name="gif_keyboard_key_content_desc">GIF Keyboard</string>
    <string name="label_agree_share_snippets">"YES, I'M IN"</string>
    <string name="label_refuse_share_snippets">NO, THANKS</string>
    <string name="lstm_extension_class_name">com.google.android.apps.inputmethod.libs.lstm.LstmExtension</string>
    <string name="lstm_models_metadata_uri">https://www.gstatic.com/android/keyboard/modelpack/Celesta/metadata.json</string>
    <string name="lstm_prediction_model_variant">20170122-d</string>
    <string name="lstm_prediction_strategy">personalized</string>
    <string name="lstm_training_cache_loggable_events">deactivate</string>
    <string name="setting_advanced">Advanced</string>
    <string name="setting_correction">Text correction</string>
    <string name="setting_dictionary">Dictionary</string>
    <string name="setting_gesture">Glide typing</string>
    <string name="setting_languages">Languages</string>
    <string name="setting_preferences">Preferences</string>
    <string name="setting_search">Search</string>
    <string name="setting_theme">Theme</string>
    <string name="sharing_snippets_learn_more">Learn more</string>
    <string name="sharing_snippets_privacy_notice_content">Automatically share some anonymized snippets of what and how you type in Google apps to improve %s.</string>
    <string name="sharing_snippets_privacy_notice_title">Help build a better keyboard</string>
    <string name="toast_cannot_download_suggestions">Cannot download suggestions for %1$s because the device is offline. Will try again later.</string>
    <string name="toast_downloading_suggestions">Downloading: suggestions for %1$s will be ready soon.</string>
    <string name="voiceime_extension_class_name">com.google.android.apps.inputmethod.libs.voiceime.VoiceImeExtension</string>
</resources>