<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:title="@string/setting_languages">
        <intent android:targetPackage="@string/application_id" android:targetClass="com.google.android.apps.inputmethod.libs.framework.preference.SubtypeSettingsActivity" />
    </header>
    <header android:title="@string/setting_preferences" android:fragment="com.google.android.apps.inputmethod.latin.preference.LatinPreferencesSettingsFragment">
        <extra android:name="PREFERENCE_FRAGMENT" android:value="setting_preferences" />
    </header>
    <header android:title="@string/setting_theme">
        <intent android:targetPackage="@string/application_id" android:targetClass="com.google.android.apps.inputmethod.libs.theme.preference.ThemeSelectorActivity" />
    </header>
    <header android:title="@string/setting_correction" android:fragment="com.google.android.apps.inputmethod.libs.framework.preference.CommonPreferenceFragment">
        <extra android:name="PREFERENCE_FRAGMENT" android:value="setting_correction" />
    </header>
    <header android:title="@string/setting_gesture" android:fragment="com.google.android.apps.inputmethod.libs.framework.preference.CommonPreferenceFragment">
        <extra android:name="PREFERENCE_FRAGMENT" android:value="setting_gesture" />
    </header>
    <header android:title="@string/setting_dictionary" android:fragment="com.google.android.apps.inputmethod.latin.preference.LatinDictionarySettingsFragment">
        <extra android:name="PREFERENCE_FRAGMENT" android:value="setting_dictionary" />
    </header>
    <header android:title="@string/setting_search" android:fragment="com.google.android.apps.inputmethod.libs.framework.preference.CommonPreferenceFragment">
        <extra android:name="PREFERENCE_FRAGMENT" android:value="setting_search" />
    </header>
    <header android:title="@string/setting_advanced" android:fragment="com.google.android.apps.inputmethod.libs.framework.preference.CommonPreferenceFragment">
        <extra android:name="PREFERENCE_FRAGMENT" android:value="setting_advanced" />
    </header>
</preference-headers>