<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/PrivacyNotice"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:src="@mipmap/ic_app" style="@style/PrivacyNoticeAppImage" />
    <LinearLayout style="@style/PrivacyNoticeContentWrapper">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="720.0">
            <com.google.android.apps.inputmethod.libs.framework.keyboard.widget.AutoSizeTextView android:text="@string/sharing_snippets_privacy_notice_title" android:contentDescription="@string/sharing_snippets_privacy_notice_title" style="@style/PrivacyNoticeTitle" />
            <RelativeLayout style="@style/PrivacyNoticeContent">
                <TextView android:id="@id/privacy_notice_content_text" android:text="@string/sharing_snippets_privacy_notice_content" style="@style/PrivacyNoticeContentText" />
                <TextView android:id="@id/privacy_notice_learn_more" android:text="@string/sharing_snippets_learn_more" android:layout_alignBottom="@id/privacy_notice_content_text" style="@style/PrivacyNoticeLearnMore" />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="280.0">
            <Button android:id="@id/agree_button" android:text="@string/label_agree_share_snippets" android:layout_alignParentRight="true" style="@style/PrivacyNoticeAgreeButton" />
            <Button android:id="@id/refuse_button" android:text="@string/label_refuse_share_snippets" android:layout_toLeftOf="@id/agree_button" style="@style/PrivacyNoticeRefuseButton" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>