<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/GBoardErrorCard"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/error_card_header_font_size" android:textStyle="bold" android:textColor="@color/gif_error_message_text_color_material_light" android:layout_gravity="center|top" android:tag=".label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/gboard_no_results_header" />
    <TextView android:textSize="@dimen/error_card_subheader_font_size" android:textColor="@color/gif_error_message_text_color_material_light" android:layout_gravity="start|center" android:tag=".label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/gboard_no_results_subheader" />
    <TextView android:textSize="@dimen/error_card_message_font_size" android:textColor="@color/gif_error_message_text_color_material_light" android:layout_gravity="start|bottom|center" android:tag=".label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/gboard_no_results_message" />
</LinearLayout>