<?xml version="1.0" encoding="utf-8"?>
<framework>
    <softkey id="@id/softkey_non_prime_emoji_tab" layout="@layout/softkey_icon" content_description="@string/emoji_keyboard_key_content_desc" alpha="@attr/IconAlpha">
        <action type="PRESS" keycode="OPEN_EXTENSION" data="com.google.android.apps.inputmethod.libs.search.emoji.IEmojiSearchExtension" />
        <icon location="@id/icon" value="@attr/IconTabSmiley" />
    </softkey>
    <softkey id="@id/softkey_non_prime_emotion_tab" layout="@layout/softkey_icon" content_description="@string/emoticon_keyboard_key_content_desc" alpha="@attr/IconAlpha">
        <action type="PRESS" keycode="SWITCH_KEYBOARD" data="emoticon" />
        <icon location="@id/icon" value="@attr/IconTabEmotion" />
    </softkey>
    <softkey id="@id/softkey_non_prime_gif_tab" layout="@layout/softkey_icon" content_description="@string/gif_keyboard_key_content_desc" alpha="@attr/IconAlpha">
        <action type="PRESS" keycode="OPEN_EXTENSION" data="com.google.android.apps.inputmethod.libs.search.IGifKeyboardExtension" />
        <icon location="@id/icon" value="@attr/IconTabGif" />
    </softkey>
    <softkey id="@id/softkey_non_prime_emoji_tab_highlighted" layout="@layout/softkey_icon" content_description="@string/emoji_keyboard_key_content_desc">
        <icon location="@id/icon" value="@attr/IconTabSmiley" />
    </softkey>
    <softkey id="@id/softkey_non_prime_emotion_tab_highlighted" layout="@layout/softkey_icon" content_description="@string/emoticon_keyboard_key_content_desc">
        <icon location="@id/icon" value="@attr/IconTabEmotion" />
    </softkey>
    <softkey id="@id/softkey_non_prime_gif_tab_highlighted" layout="@layout/softkey_icon" content_description="@string/gif_keyboard_key_content_desc">
        <icon location="@id/icon" value="@attr/IconTabGif" />
    </softkey>
    <softkey id="@id/softkey_non_prime_emoji_tab_in_extension" layout="@layout/softkey_icon" content_description="@string/emoji_keyboard_key_content_desc" alpha="@attr/IconAlpha">
        <action type="PRESS" keycode="OPEN_EXTENSION" data="com.google.android.apps.inputmethod.libs.search.emoji.IEmojiSearchExtension" />
        <icon location="@id/icon" value="@attr/IconTabSmiley" />
    </softkey>
    <softkey id="@id/softkey_non_prime_emotion_tab_in_extension" layout="@layout/softkey_icon" content_description="@string/emoticon_keyboard_key_content_desc" alpha="@attr/IconAlpha">
        <action type="PRESS" keycode="CLOSE_EXTENSION" data="emoticon" />
        <icon location="@id/icon" value="@attr/IconTabEmotion" />
    </softkey>
    <softkey id="@id/softkey_non_prime_emoji_tab_disabled" layout="@layout/softkey_icon" content_description="@string/emoji_keyboard_key_content_desc" alpha="@attr/IconDisabledAlpha">
        <icon location="@id/icon" value="@attr/IconTabSmiley" />
    </softkey>
    <softkey id="@id/softkey_non_prime_gif_tab_disabled" layout="@layout/softkey_icon" content_description="@string/gif_keyboard_key_content_desc" alpha="@attr/IconAlpha">
        <action type="PRESS" keycode="SHOW_TOAST_SHORT_TIME" data="@string/gif_disabled_toast_message" />
        <icon location="@id/icon" value="@attr/IconTabGifDisabled" />
    </softkey>
</framework>