<?xml version="1.0" encoding="utf-8"?>
<xml>
    <item id="@bool/confidential_build" />
    <item id="@string/toast_downloading_suggestions" />
    <item id="@string/toast_cannot_download_suggestions" />
    <item id="@xml/setting_about" />
    <item id="@xml/setting_advanced" />
    <item id="@xml/setting_correction" />
    <item id="@xml/setting_dictionary" />
    <item id="@xml/setting_gesture" />
    <item id="@xml/setting_preferences" />
    <item id="@xml/setting_search" />
    <item id="@xml/settings" />
    <item id="@xml/settings_spell_checker" />
    <item id="@string/voiceime_extension_class_name" />
    <item id="@string/lstm_extension_class_name" />
    <item id="@integer/lstm_extension_min_api_level" />
    <item id="@bool/lstm_prediction_enabled" />
    <item id="@bool/lstm_training_enabled" />
    <item id="@integer/lstm_max_native_crashes" />
    <item id="@string/lstm_models_metadata_uri" />
    <item id="@string/lstm_prediction_strategy" />
    <item id="@string/lstm_prediction_model_variant" />
    <item id="@bool/lstm_hide_predictions" />
    <item id="@integer/lstm_variability_period_seconds" />
    <item id="@integer/lstm_training_cache_erasure_period_days" />
    <item id="@bool/lstm_training_cache_erasure_requires_idle" />
    <item id="@bool/lstm_training_cache_erasure_requires_charging" />
    <item id="@integer/lstm_training_cache_max_count" />
    <item id="@integer/lstm_training_cache_max_ttl_days" />
    <item id="@id/lstm_training_job_id" />
    <item id="@integer/lstm_training_period_seconds" />
    <item id="@bool/lstm_training_requires_idle" />
    <item id="@bool/lstm_training_requires_charging" />
    <item id="@integer/lstm_training_heartbeat_deadline_seconds" />
    <item id="@integer/lstm_training_retrain_limit" />
    <item id="@string/lstm_training_cache_loggable_events" />
    <item id="@integer/lstm_training_cache_write_interval_millis" />
    <item id="@string/lstm_training_cache_name" />
    <item id="@xml/delight4_unreferenced_resources" />
    <item id="@bool/conv2query_training_enabled" />
    <item id="@integer/conv2query_training_cache_erasure_period_days" />
    <item id="@bool/conv2query_training_cache_erasure_requires_idle" />
    <item id="@bool/conv2query_training_cache_erasure_requires_charging" />
    <item id="@integer/conv2query_training_cache_max_count" />
    <item id="@integer/conv2query_training_cache_max_ttl_days" />
    <item id="@integer/conv2query_training_cache_write_interval_millis" />
    <item id="@string/conv2query_training_cache_name" />
    <item id="@xml/ime_af" />
    <item id="@xml/ime_am" />
    <item id="@xml/ime_ar_ma" />
    <item id="@xml/ime_ar" />
    <item id="@xml/ime_az_az" />
    <item id="@xml/ime_be_by" />
    <item id="@xml/ime_bg_bds" />
    <item id="@xml/ime_bg" />
    <item id="@xml/ime_bn_bd" />
    <item id="@xml/ime_bn_in" />
    <item id="@xml/ime_bo_cn" />
    <item id="@xml/ime_bs" />
    <item id="@xml/ime_ca" />
    <item id="@xml/ime_ceb" />
    <item id="@xml/ime_co" />
    <item id="@xml/ime_cs" />
    <item id="@xml/ime_cy" />
    <item id="@xml/ime_da" />
    <item id="@xml/ime_de_ch" />
    <item id="@xml/ime_de" />
    <item id="@xml/ime_dummy_hard" />
    <item id="@xml/ime_dummy_zz" />
    <item id="@xml/ime_el" />
    <item id="@xml/ime_en_au" />
    <item id="@xml/ime_en_ca" />
    <item id="@xml/ime_en_gb" />
    <item id="@xml/ime_en_in" />
    <item id="@xml/ime_en_ke" />
    <item id="@xml/ime_en_ng" />
    <item id="@xml/ime_en_ph" />
    <item id="@xml/ime_en_us" />
    <item id="@xml/ime_en_za" />
    <item id="@xml/ime_eo" />
    <item id="@xml/ime_es_419" />
    <item id="@xml/ime_es_ar" />
    <item id="@xml/ime_es_es" />
    <item id="@xml/ime_es_mx" />
    <item id="@xml/ime_es_us" />
    <item id="@xml/ime_et_ee" />
    <item id="@xml/ime_eu_es" />
    <item id="@xml/ime_fa_af" />
    <item id="@xml/ime_fa" />
    <item id="@xml/ime_fi" />
    <item id="@xml/ime_fr_002" />
    <item id="@xml/ime_fragment_password" />
    <item id="@xml/ime_fr_ca" />
    <item id="@xml/ime_fr_ch" />
    <item id="@xml/ime_fr" />
    <item id="@xml/ime_fy" />
    <item id="@xml/ime_ga" />
    <item id="@xml/ime_gl_es" />
    <item id="@xml/ime_gn" />
    <item id="@xml/ime_gv" />
    <item id="@xml/ime_ha" />
    <item id="@xml/ime_hi_compact" />
    <item id="@xml/ime_hi_dynamic" />
    <item id="@xml/ime_hi_transliteration" />
    <item id="@xml/ime_hi_zz" />
    <item id="@xml/ime_hmn" />
    <item id="@xml/ime_hr" />
    <item id="@xml/ime_ht" />
    <item id="@xml/ime_hu" />
    <item id="@xml/ime_hy_am" />
    <item id="@xml/ime_ig" />
    <item id="@xml/ime_in" />
    <item id="@xml/ime_is" />
    <item id="@xml/ime_it_ch" />
    <item id="@xml/ime_it" />
    <item id="@xml/ime_iw" />
    <item id="@xml/ime_ji" />
    <item id="@xml/ime_jv" />
    <item id="@xml/ime_ka_ge" />
    <item id="@xml/ime_ka_qwerty" />
    <item id="@xml/ime_kk" />
    <item id="@xml/ime_kl" />
    <item id="@xml/ime_km_kh" />
    <item id="@xml/ime_km_kh_native" />
    <item id="@xml/ime_kn_in" />
    <item id="@xml/ime_ku_iq" />
    <item id="@xml/ime_ku_latin" />
    <item id="@xml/ime_ky" />
    <item id="@xml/ime_la" />
    <item id="@xml/ime_lb" />
    <item id="@xml/ime_ln" />
    <item id="@xml/ime_lo_la" />
    <item id="@xml/ime_lt" />
    <item id="@xml/ime_lv" />
    <item id="@xml/ime_mg" />
    <item id="@xml/ime_mk" />
    <item id="@xml/ime_ml_in" />
    <item id="@xml/ime_mn_mn" />
    <item id="@xml/ime_mr_in" />
    <item id="@xml/ime_ms_my" />
    <item id="@xml/ime_mt" />
    <item id="@xml/ime_nb" />
    <item id="@xml/ime_ne_romanized" />
    <item id="@xml/ime_ne_traditional" />
    <item id="@xml/ime_nl_be" />
    <item id="@xml/ime_nl" />
    <item id="@xml/ime_nso" />
    <item id="@xml/ime_ny" />
    <item id="@xml/ime_pap" />
    <item id="@xml/ime_password" />
    <item id="@xml/ime_pl" />
    <item id="@xml/ime_pt_002" />
    <item id="@xml/ime_pt_br" />
    <item id="@xml/ime_pt_pt" />
    <item id="@xml/ime_ro" />
    <item id="@xml/ime_ro_md" />
    <item id="@xml/ime_ru" />
    <item id="@xml/ime_sk" />
    <item id="@xml/ime_sl" />
    <item id="@xml/ime_sq" />
    <item id="@xml/ime_sr_xa" />
    <item id="@xml/ime_sr_xb" />
    <item id="@xml/ime_sr" />
    <item id="@xml/ime_sr_zz" />
    <item id="@xml/ime_srn" />
    <item id="@xml/ime_st" />
    <item id="@xml/ime_su" />
    <item id="@xml/ime_sv" />
    <item id="@xml/ime_sw" />
    <item id="@xml/ime_ta_in_dynamic" />
    <item id="@xml/ime_ta_lk_dynamic" />
    <item id="@xml/ime_ta_sg_dynamic" />
    <item id="@xml/ime_te_in" />
    <item id="@xml/ime_tg" />
    <item id="@xml/ime_th" />
    <item id="@xml/ime_tk" />
    <item id="@xml/ime_tl" />
    <item id="@xml/ime_tpi" />
    <item id="@xml/ime_tr" />
    <item id="@xml/ime_trw" />
    <item id="@xml/ime_tt" />
    <item id="@xml/ime_uk" />
    <item id="@xml/ime_uz" />
    <item id="@xml/ime_ur_in" />
    <item id="@xml/ime_vi" />
    <item id="@xml/ime_xh_za" />
    <item id="@xml/ime_zu" />
    <item id="@xml/ime_zz" />
    <item id="@xml/ime_my" />
    <item id="@xml/ime_om" />
    <item id="@xml/ime_ps" />
    <item id="@xml/ime_si" />
    <item id="@xml/ime_sn" />
    <item id="@xml/ime_so" />
    <item id="@xml/ime_ug" />
    <item id="@xml/ime_ur_pk" />
    <item id="@xml/ime_wo" />
    <item id="@xml/ime_yo" />
    <item id="@string/emoji_search_en_us_prebundled_version" />
</xml>