<?xml version="1.0" encoding="utf-8"?>
<framework>
    <softkeys>
        <softkey id="@id/softkey_close_extension" layout="@layout/softkey_icon_automirror_with_padding" content_description="@string/gboard_gif_extension_content_desc">
            <action type="PRESS" keycode="CLOSE_EXTENSION" />
            <icon location="@id/icon" value="@attr/IconKeyboardBackspace" alpha="@attr/IconAlpha" />
        </softkey>
        <softkey id="@id/softkey_close_extension_back_arrow_no_theme" layout="@layout/softkey_icon_automirror_no_theme_with_padding" content_description="@string/gboard_gif_extension_content_desc">
            <action type="PRESS" keycode="CLOSE_EXTENSION" />
            <icon location="@id/icon" value="@drawable/quantum_ic_keyboard_backspace_grey600_24" />
        </softkey>
        <softkey id="@id/softkey_clear_query_no_theme" layout="@layout/softkey_icon_no_theme_with_padding" content_description="@string/gboard_cancel_query_content_desc">
            <action type="PRESS" keycode="CLEAR_SEARCH" />
            <icon location="@id/icon" value="@drawable/quantum_ic_cancel_black_24" />
        </softkey>
        <softkey id="@id/softkey_clear_and_open_search" layout="@layout/softkey_icon_with_padding">
            <action type="PRESS" keycode="SWITCH_TO_SEARCH_KEYBOARD" />
            <icon location="@id/icon" value="@attr/IconCancel" alpha="@attr/IconAlpha" />
        </softkey>
        <softkey id="@id/softkey_clear_and_open_search_no_theme" layout="@layout/softkey_icon_no_theme_with_padding">
            <action type="PRESS" keycode="SWITCH_TO_SEARCH_KEYBOARD" />
            <icon location="@id/icon" value="@drawable/quantum_ic_cancel_black_24" />
        </softkey>
        <softkey id="@id/softkey_open_search_keyboard" layout="@layout/softkey_icon_no_theme" content_description="@string/gboard_gif_search_content_desc">
            <action type="PRESS" keycode="SWITCH_TO_SEARCH_KEYBOARD" />
            <icon location="@id/icon" value="@drawable/ic_google_search_trim" />
        </softkey>
        <softkey id="@id/softkey_open_emojihandwriting" layout="@layout/softkey_icon_no_theme_with_padding" content_description="@string/gboard_emojihandwriting_content_desc">
            <action type="PRESS" keycode="OPEN_EXTENSION" data="com.google.android.apps.inputmethod.libs.emojihandwriting.IEmojiHandwritingExtension" />
            <icon location="@id/icon" value="@drawable/quantum_ic_gesture_black_24" />
        </softkey>
    </softkeys>
</framework>